pages/styles.css
/* General body styling */
body {
    font-family: 'Times New Roman';
    margin: 10px;
    padding-top: 20px;
    display: flex;
    flex-direction: column;
    height: 100vh;
    background-color: #f0f2f5;
    }
    
/* Top bar styling */
ul {
    list-style-type: none;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    margin: 0;
    padding: 0 16px;
    background-color: #333333;
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

ul .title {
    color: white;
    font-size: 20px;
    margin: 0;
}

ul li:nth-child(2) {
    margin-left: auto;
}

/* Top bar buttons */
ul li a {
    display: block;
    color: white;
    padding: 14px 16px;
    text-decoration: none;
}

/* Hover for top bar buttons */
ul li a:hover {
    background-color: #111111;
}

/* Underline spanning whole page */
.longer-underline {
  text-decoration: none;
  display: inline-block;
  border-bottom: 1px solid black;
}

/* Container position */
.upload-container {
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  padding: 40px;
}

/* Upload box styling */
.custom-upload-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 1600;
  height: 800;
  border: 2px solid #4a90e2;
  border-radius: 12px;
  background-color: #f9fbfd;
  cursor: pointer;
  transition: all 0.3s ease;
}

/* File upload hover */
.custom-upload-box:hover {
  background-color: #f0f7ff;
  border-color: #2b72c4;
  transform: scale(1.01);
}

/* File upload icon */
.upload-icon {
  font-size: 40px;
  margin-bottom: 10px;
}

/* File upload text */
.upload-text {
  color: #555;
  font-size: 14px;
}

.upload-text strong {
  color: #4a90e2;
}

/* COMPLETELY HIDE THE DEFAULT INPUT FIELD */
.hidden-input {
  display: none;
}

/* Dashed line around container */
.custom-record-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 1000;
  height: 1600;
  border: 2px solid #4a90e2;
  border-radius: 12px;
  background-color: #f9fbfd;
}

.video-preview {
  width: 80%;
  height: auto;
  margin-bottom: 20px;
  margin-top: 20px;
}

.startButton, .stopButton {
  padding: 10px 20px;
  font-size: 16px;
  color: white;
  background-color: #4a90e2;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  margin-top: 10px;
  align-self: center;
}

.startButton, .stopButton:hover {
  background-color: #78afef;
  border-color: #2b72c4;
}

/* user guide content styling */
.guide-content {
  background-color: white;
  padding: 10px;
  border-radius: 10px;
  margin-bottom: 20px;
}

/* side-by-side content */
.guide-columns {
  display: flex;
  gap: 20px;
  flex-wrap: wrap;
}

/* column styling */
.guide-panel {
  flex: 1;
}

